Temalar ayarlandı Kullanıcılar eklendi Crud işlemleri Yapıldı bazı düzenlemeler yapıldı.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,8 @@
 @import url('/node_modules/bootstrap');
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500');
+
+@import url('/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css');
+@import url('/node_modules/@fortawesome/fontawesome-free/css/regular');
+@import url('/node_modules/@fortawesome/fontawesome-free/css/solid');
+@import url('/node_modules/@fortawesome/fontawesome-free/css/brands');
